[package]
name = "flif"
version = "0.0.2"
authors = ["Daniel Griffen <daniel@griffen.io>"]
license = "MIT"
description = "flif decoder written in pure Rust"

[lib]
name = "flif"
path = "src/flif/lib.rs"

[[bin]]
name = "flif"
path = "src/bin/main.rs"
doc = false
required-features = ["binary"]

[dependencies]
inflate = "0.3.0"
num-traits = "0.1.40"
failure = "0.1"
failure_derive = "0.1"

#binary only dependencies
structopt = { version = "0.1.0", optional = true }
structopt-derive = { version = "0.1.0", optional = true }

[features]
binary = ["structopt", "structopt-derive"]